# BifrostEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  Folder.DotSettings  LICENSE  README.md  build.bat  cpp.hint  main.c  main.cpp  main_tests.cpp  test_script.bts
Bifrost/DataStructures/: CMakeLists.txt
Bifrost/DataStructures/include/bf/: Array.hpp  DenseMap.hpp
Bifrost/DataStructures/src/: bifrost_array_t.c  bifrost_dynamic_string.c  bifrost_hash_map.c  bifrost_string.cpp
Bifrost/Memory/: CMakeLists.txt
Bifrost/Memory/include/bf/: IMemoryManager.hpp  MemoryUtils.h  StlAllocator.hpp
Bifrost/Memory/src/: bifrost_c_allocator.cpp  bifrost_freelist_allocator.cpp  bifrost_imemory_manager.cpp  bifrost_linear_allocator.cpp  bifrost_memory_utils.c  bifrost_pool_allocator.cpp
Bifrost/Network/: Address.hpp  CMakeLists.txt  NetworkContext.cpp  NetworkContext.hpp  NetworkError.hpp  NetworkPlatform.cpp  NetworkPlatform.hpp  Socket.cpp  Socket.hpp  network_main.cpp
Bifrost/Network/bf/: Network.hpp
Bifrost/Text/: CMakeLists.txt
Bifrost/Text/include/bf/: Text.hpp
Bifrost/Text/src/: bf_text.cpp
BifrostAnimation2D/: CMakeLists.txt
BifrostAnimation2D/include/: bifrost_animation2D_export.h  bifrost_sprite_animation_api.h
BifrostAnimation2D/src/: bifrost_sprite_animation.c
BifrostExperiments/: CMakeLists.txt  main.c
BifrostExperiments/src/: bifrost_json.c
BifrostGraphics/: CMakeLists.txt
BifrostGraphics/src/: bifrost_gfx_common.c  bifrost_gfx_opengl.cpp  bifrost_gfx_vulkan.cpp
BifrostGraphics/src/vulkan/: bifrost_vulkan_command_list.cpp  bifrost_vulkan_conversions.c  bifrost_vulkan_hash.hpp  bifrost_vulkan_logical_device.h  bifrost_vulkan_material_pool.h  bifrost_vulkan_mem_allocator.cpp  bifrost_vulkan_renderpass.cpp
BifrostMath/: CMakeLists.txt
BifrostMath/include/bifrost/: bifrost_math.h  bifrost_math.hpp
BifrostMath/src/: bifrost_camera.c  bifrost_mat4x4.c  bifrost_transform.c
BifrostPlatform/: CMakeLists.txt
BifrostPlatform/src/: bifrost_platform.c  bifrost_platform_glfw.c  bifrost_platform_sdl.c
BifrostScript/: CMakeLists.txt  README.md  bifrost_graphics_opengl.cpp  vm_command_line.cpp  vm_js.data  vm_js.html  vm_js.js  webgl_testing.cpp
BifrostScript/include/: bifrost_vm.h  bifrost_vm.hpp
BifrostScript/include/bifrost/: bifrost_vm.h  bifrost_vm.hpp  bifrost_vm_export.h
BifrostScript/src/: bifrost_hash_map.c  bifrost_vm_api.c  bifrost_vm_build.c  bifrost_vm_debug.c  bifrost_vm_debug.h  bifrost_vm_function_builder.c  bifrost_vm_function_builder.h  bifrost_vm_gc.c  bifrost_vm_gc.h  bifrost_vm_instruction_op.h  bifrost_vm_lexer.c  bifrost_vm_lexer.h  bifrost_vm_obj.c  bifrost_vm_obj.h  bifrost_vm_parser.c  bifrost_vm_parser.h  bifrost_vm_value.c  bifrost_vm_value.h
Engine/: CMakeLists.txt  README.md
Engine/Anim2D/: CMakeLists.txt
Engine/Anim2D/src/: bf_anim2D.cpp  bf_sprite_animation.cpp
Engine/AssetIO/: CMakeLists.txt  README.md
Engine/AssetIO/src/: bf_asset_map.cpp  bf_base_asset.cpp  bf_document.cpp  bf_gfx_assets.cpp  bf_model_loader.cpp
Engine/Core/: CMakeLists.txt
Engine/Core/include/bf/: bf_core.h  (+2 more)
Engine/Core/src/: bf_core.c  bf_dbg_logger.c
Engine/DataStructures/: CMakeLists.txt
Engine/DataStructures/src/: bifrost_array_t.c  bifrost_dynamic_string.c  bifrost_string.cpp
Engine/Dispatch/: CMakeLists.txt  CMakeSettings.json
Engine/Dispatch/tests/: poly_main.cpp
Engine/Graphics/: CMakeLists.txt  README.md
Engine/Graphics/src/: bf_gfx_common.c  bf_gfx_object.h  bf_gfx_object_cache.hpp  bf_gfx_opengl.cpp  bf_gfx_vulkan.cpp
Engine/Graphics2D/src/: bf_painter.cpp
Engine/Job/: README.md
Engine/Job/src/: bf_job_queue.hpp  bf_job_system.cpp
Engine/Job/tests/: job_sys_main.cpp
Engine/Math/: CMakeLists.txt
Engine/Math/src/: bifrost_camera.c  bifrost_mat4x4.c  bifrost_rect2.cpp  bifrost_transform.c  bifrost_vec2.c  bifrost_vec3.c
Engine/Memory/: CMakeLists.txt  README.md
Engine/Memory/src/: bf_c_allocator.cpp  bf_crt_allocator.cpp  bf_freelist_allocator.cpp  bf_imemory_manager.cpp  bf_linear_allocator.cpp  bf_memory_utils.c  bf_pool_allocator.cpp  bf_proxy_allocator.cpp  bf_stack_allocator.cpp  bifrost_imemory_manager.cpp  bifrost_linear_allocator.cpp  bifrost_pool_allocator.cpp  bifrost_proxy_allocator.cpp  bifrost_stack_allocator.cpp
Engine/Meta/: CMakeLists.txt
Engine/Network/: Address.hpp  CMakeLists.txt  NetworkContext.cpp  NetworkContext.hpp  NetworkError.hpp  NetworkPlatform.cpp  NetworkPlatform.hpp  Socket.cpp  Socket.hpp  network_main.cpp
Engine/Network/bf/: Network.hpp  bf_net.cpp  bf_net.hpp
Engine/Platform/: CMakeLists.txt  README.md
Engine/Platform/src/: bf_platform.c  bf_platform_glfw.c  bf_platform_sdl.c
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/lib/: bifrost_webgl.js
Engine/Runtime/src/: bf_render_queue.cpp  bf_runtime_driver.cpp  bifrost_imgui_glfw.cpp
Engine/TMPUtils/: CMakeLists.txt
Engine/TMPUtils/src/: bf_hash.cpp
Engine/TMPUtils/tests/: poly_main.cpp
Engine/Text/: CMakeLists.txt
Engine/Text/src/: bf_text.cpp
Engine/UI/: CMakeLists.txt
Engine/UI/src/: bf_ui.cpp
EngineStandalone/: CMakeLists.txt
EngineStandalone/src/: engine_runtime.cpp
Experiments/: CMakeLists.txt  main.c
Experiments/src/: bifrost_json.c
Graphics/: CMakeLists.txt
Graphics/include/bf/: bf_gfx_api.h  bf_gfx_export.h  bf_gfx_object_cache.hpp  bf_gfx_pipeline_state.h  bf_gfx_types.h
Graphics/src/: bf_gfx_vulkan.cpp  bifrost_gfx_common.c  bifrost_gfx_opengl.cpp  bifrost_gfx_vulkan.cpp
Graphics/src/vulkan/: bf_vulkan_command_list.cpp  bf_vulkan_conversions.c  bf_vulkan_conversions.h  bf_vulkan_hash.hpp  bf_vulkan_logical_device.h  bf_vulkan_mem_allocator.cpp  bf_vulkan_renderpass.cpp  bifrost_vulkan_command_list.cpp  bifrost_vulkan_conversions.c  bifrost_vulkan_conversions.h  bifrost_vulkan_hash.hpp  bifrost_vulkan_logical_device.h  bifrost_vulkan_material_pool.cpp  bifrost_vulkan_material_pool.h  bifrost_vulkan_mem_allocator.cpp  bifrost_vulkan_mem_allocator.h  bifrost_vulkan_physical_device.h  bifrost_vulkan_renderpass.cpp
(+1118 files in other folders)
